--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,7 +37,6 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "redux-logger": "^3.0.6"
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
