--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "search-test-react",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "https://nsgowest.github.io/Organizations-React",
   "dependencies": {
     "react": "^16.11.0",
     "react-dadata-suggestions": "^1.3.3",
